test/scc_test/expr/semantic-errors/093.a
093.t:4:9: error: expression must have struct or union type